Sat Dec 15 10:49:46 GMT 2012  Joe Hansen  <joedalton2@yahoo.dk>

	* man/po4a/po/da.po: Update from Translation Project.

Sat Nov 24 22:42:01 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/da.po: New from Translation Project (thanks, Joe
	  Hansen).
	* configure.ac (AC_CONFIG_FILES): Add man/da/Makefile.
	* man/LINGUAS.po4a: Add da.
	* man/Makefile.am (DIST_SUBDIRS): Add da.
	* man/da/Makefile.am, man/da/translator.add: New files.
	* man/po4a/Makefile.am (POFILES): Add po/da.po.
	* man/po4a/po4a.cfg (po4a_langs): Add da.
	* man/THANKS: Credit Joe Hansen with man/da as well as da.po.
	* .bzrignore: Add man/da/man1, man/da/man5, and man/da/man8.

Mon Sep 17 23:22:48 BST 2012  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.3.

Mon Sep 17 23:20:19 BST 2012  Colin Watson  <cjwatson@debian.org>

	Stop distributing .tar.gz, as promised in the release notes for
	2.6.2.

	* configure.ac (AM_INIT_AUTOMAKE): Add no-dist-gzip.
	* docs/man-db.lsm (Primary-site): Drop .tar.gz size.

Mon Sep 17 22:53:40 BST 2012  Colin Watson  <cjwatson@debian.org>

	* autogen.sh, release.sh: Use 'set -e' rather than '#! /bin/sh -e',
	  to avoid accidents when debugging with 'sh -x'.

Mon Sep 17 22:53:14 BST 2012  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Add gnulib/gets.patch.

Mon Sep 17 22:33:41 BST 2012  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Use AM_PROG_AR before LT_INIT, for compatibility
	  with Automake 1.12.
	* NEWS: Document this.

Mon Sep 17 22:28:27 BST 2012  Colin Watson  <cjwatson@debian.org>

	Backport Gnulib commit 66712c23388e93e5c518ebc8515140fa0c807348 to
	stop assuming gets (Savannah bug #37255).

	* gnulib/gets.patch: New file.
	* autogen.sh: Apply gnulib/gets.patch.
	* NEWS: Document this.

Mon Sep 17 22:07:02 BST 2012  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.11.6.

Thu Aug 16 12:08:48 BST 2012  Trần Ngọc Quân  <vnwildman@gmail.com>

	* po/vi.po: Update from Translation Project.